# smore

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  bacon.toml  flake.nix
qml/: main.qml
src/: implementation.rs  main.rs
src/components/: button.rs  loading.rs  meta.rs  mod.rs  page.rs  scale.rs  theme.rs  utils.rs
src/views/: login.rs  mod.rs
